ActionMenu/UIResources/index.css
@font-face {
    /* GPL OFL font, yay!
        https://www.1001freefonts.com/montserrat.font */
    font-family: "Montserrat-Regular";
    src: url("Montserrat-Regular.ttf");
}

* {
    margin: 0px;
    padding: 0px;
    font-family: Montserrat-Regular;
}

.themed-radial {
    background: radial-gradient(#443700, #443700 25%, #ded530 25.1%, #f68e00 28%, #3a1500);
    border-radius: 50%;
}

.themed-border {
    border: 3px solid #ded530;
}

/* cyan: radial-gradient(#22434a, #22434a 25%, #57abbf 25.1%, #24798d 28%, #06181c); */

#actionmenu {
    display: block;
    position: absolute;
    height: 497px; /* due to borders */
    width: 497px;
}

#widget-radial {
    display: none;
    position: absolute;
    height: 497px;
    width: 497px;

    background: radial-gradient(#d17f00 28%, #3a1500);
    border-radius: 50%;
    overflow: hidden;
}

#widget-radial .arc {
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
    background: radial-gradient(#eea22cf2 28%, #765407);
    border-radius: 50%;
}

#widget-radial .value {
    display: block;
    position: absolute;
    top: 0%;
    left: 50%;
    width: 100%;
    height: 40px;
    text-align: center;
    color: white;
    font-size: 30px;
    transform: translate(-50%, -50%);
    background-color: rgba(45, 45, 45, 0.5);
    border-radius: 20px;
    padding: 5px;
}

#widget-radial .center, #widget-j2d .center {
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

#actionmenu .sector {
    display: none;
    position: absolute;
    height: 100%;
    width: 100%;
    background-color: #ded530;
    border-radius: 50%;
    opacity: 0.75;
}

#actionmenu .enabled_sectors {
    position: absolute;
    width: 100%;
    height: 100%;
}

#actionmenu .sector.enabled {
    opacity: 0.5;
}

.inside {
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    width: 36%;
    height: 36%;
    background-color: #5c3c00;
    border-radius: 50%;
    transform: translate(-50%, -50%);
}

.animated-menu {
    animation-name: open_actionmenu;
    animation-iteration-count: 1;
    animation-duration: 0.2s;
    animation-fill-mode: forwards;
}

@keyframes open_actionmenu {
    from {
        transform: translate(-110px, -110px);
        width: 44%;
        height: 44%;
    }

    to {
        transform: translate(-90px, -90px);
        width: 36%;
        height: 36%;
    }
}

#actionmenu .joystick,
#widget-radial .indicator,
#widget-j2d .joystick {
    display: block;
    position: absolute;
    left: 50%;
    top: 50%;
    height: 20%;
    width: 20%;
    transform: translate(-50%, -50%);
}

.joystick {
    border-radius: 50%;
    background: radial-gradient(#4a3f22,
        #4a3f22 17%, #f0ba27 20%, #534711 23%,
        #513f0c 42%, #dac024 45%, #4f480a 47%,
        #4a4422 57%, #ffc525 60%, #573b15 63%);
    opacity: 0.90;
}

#widget-radial .joystick {
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
}

#widget-j2d {
    display: none;
    position: absolute;
    height: 497px;
    width: 497px;

    background: radial-gradient(#d17f00 28%, #3a1500);
    border-radius: 50%;
    overflow: hidden;
}

#widget-j2d .triangle {
    display: block;
    position: absolute;
    width: 0px;
    height: 0px;
    border-left: 20px solid transparent;
    border-right: 20px solid transparent;
    border-bottom: 20px solid #dac024;
    transform: translate(-50%, -50%);
}

#actionmenu .separators, #actionmenu .items { /* cohtml needs this to show anything */
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
}

#actionmenu .separator {
    display: block;
    position: absolute;
    left: 50%;
    top: 50%;
    height: 50%;
    width: 0px;
    border: 2px solid #e1b20d;
    border-radius: 100%;
    transform-origin: center top;
}

#actionmenu .items .item {
    display: block;
    position: absolute;
    transform: translate(-50%, -50%);
    text-align: center;
}

.item .hover {
    animation-name: grow_item;
    animation-iteration-count: 1;
    animation-duration: 0.1s;
    animation-fill-mode: forwards;
}

@keyframes grow_item {
    from { transform: scale(1); }
    to { transform: scale(1.2); }
}

.animated-item {
    animation-name: open_item;
    animation-iteration-count: 1;
    animation-duration: 0.1s;
    animation-fill-mode: forwards;
}

@keyframes open_item {
    from {
        transform: translate(-50%, -65%);
    }

    to {
        transform: translate(-50%, -50%);
    }
}

.label {
    font-size: 20px;
    color: white;
    text-shadow: 3px 3px 6px black;
}

.icon {
    width: 75px;
    max-height: 75px;
    border-radius: 25%;
}

.full-size {
    width: 100%;
    height: 100%;
}

.debug {
    border: 1px solid black;
}

